# ScreenCriticApi

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: formater.yml  pytest.yml
alembic/: env.py
alembic/versions/: 20e420ef5591_initial_migration.py  2103ba0c833a_movie_list.py  4e4bbaf5d014_init.py  6e01e404ab07_uuid.py
screen_critic/: database.py  main.py
screen_critic/api/: deps.py  utils.py
screen_critic/api/routes/: auth.py  movie.py  movie_list.py  user.py
screen_critic/core/: auth.py  config.py
screen_critic/crud/: base.py  category.py  movie.py  movie_list.py  user.py
screen_critic/models/: __init__.py  base.py  category.py  movie.py  movie_list.py  rate.py  review.py  user.py
screen_critic/schemas/: category.py  movie.py  movie_list.py  user.py
tests/: command.py  conftest.py  factory.py
tests/test_endpoints/: test_auth_endpoint.py  test_user_endpoint.py
