[tool.poetry]
name = "screencritic"
version = "0.1.0"
description = ""
authors = ["Grzegorz Pustułka <grzegorzpustulka@onet.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
alembic = {version = "1.13.1", allow-prereleases = true}
annotated-types = {version = "0.6.0", allow-prereleases = true}
anyio = {version = "3.7.1", allow-prereleases = true}
attrs = {version = "23.1.0", allow-prereleases = true}
bcrypt = {version = "4.1.2", allow-prereleases = true}
black = {version = "23.12.1", allow-prereleases = true}
build = {version = "0.10.0", allow-prereleases = true}
cachecontrol = {version = "0.13.1", allow-prereleases = true}
certifi = {version = "2023.11.17", allow-prereleases = true}
cfgv = {version = "3.4.0", allow-prereleases = true}
charset-normalizer = {version = "3.3.1", allow-prereleases = true}
cleo = {version = "2.0.1", allow-prereleases = true}
click = {version = "8.1.7", allow-prereleases = true}
colorama = {version = "0.4.6", allow-prereleases = true}
crashtest = {version = "0.4.1", allow-prereleases = true}
distlib = {version = "0.3.7", allow-prereleases = true}
dnspython = {version = "2.4.2", allow-prereleases = true}
dulwich = {version = "0.21.6", allow-prereleases = true}
ecdsa = {version = "0.18.0", allow-prereleases = true}
email-validator = {version = "2.1.0.post1", allow-prereleases = true}
fastapi = {version = "0.105.0", allow-prereleases = true}
filelock = {version = "3.13.1", allow-prereleases = true}
greenlet = {version = "3.0.2", allow-prereleases = true}
h11 = {version = "0.14.0", allow-prereleases = true}
httpcore = {version = "1.0.2", allow-prereleases = true}
httptools = {version = "0.6.1", allow-prereleases = true}
httpx = {version = "0.26.0", allow-prereleases = true}
identify = {version = "2.5.33", allow-prereleases = true}
idna = {version = "3.6", allow-prereleases = true}
iniconfig = {version = "2.0.0", allow-prereleases = true}
installer = {version = "0.7.0", allow-prereleases = true}
isort = {version = "5.13.2", allow-prereleases = true}
jaraco-classes = {version = "3.3.0", allow-prereleases = true}
jsonschema = {version = "4.17.3", allow-prereleases = true}
keyring = {version = "24.2.0", allow-prereleases = true}
mako = {version = "1.3.0", allow-prereleases = true}
markupsafe = {version = "2.1.3", allow-prereleases = true}
more-itertools = {version = "10.1.0", allow-prereleases = true}
msgpack = {version = "1.0.7", allow-prereleases = true}
mypy-extensions = {version = "1.0.0", allow-prereleases = true}
nodeenv = {version = "1.8.0", allow-prereleases = true}
packaging = {version = "23.2", allow-prereleases = true}
passlib = {version = "1.7.4", allow-prereleases = true}
pathspec = {version = "0.12.1", allow-prereleases = true}
pexpect = {version = "4.8.0", allow-prereleases = true}
pkginfo = {version = "1.9.6", allow-prereleases = true}
platformdirs = {version = "3.11.0", allow-prereleases = true}
pluggy = {version = "1.3.0", allow-prereleases = true}
poetry = {version = "1.6.1", allow-prereleases = true}
poetry-core = {version = "1.7.0", allow-prereleases = true}
poetry-plugin-export = {version = "1.6.0", allow-prereleases = true}
pre-commit = {version = "3.6.0", allow-prereleases = true}
psycopg2 = {version = "2.9.9", allow-prereleases = true}
ptyprocess = {version = "0.7.0", allow-prereleases = true}
pyasn1 = {version = "0.5.1", allow-prereleases = true}
pydantic = {version = "2.5.2", allow-prereleases = true}
pydantic-settings = {version = "2.1.0", allow-prereleases = true}
pydantic-core = {version = "2.14.5", allow-prereleases = true}
pyproject-hooks = {version = "1.0.0", allow-prereleases = true}
pyrsistent = {version = "0.20.0", allow-prereleases = true}
pytest = {version = "7.4.3", allow-prereleases = true}
python-dotenv = {version = "1.0.0", allow-prereleases = true}
python-jose = {version = "3.3.0", allow-prereleases = true}
python-multipart = {version = "0.0.6", allow-prereleases = true}
pywin32-ctypes = {version = "0.2.2", allow-prereleases = true}
pyyaml = {version = "6.0.1", allow-prereleases = true}
rapidfuzz = {version = "2.15.2", allow-prereleases = true}
requests = {version = "2.31.0", allow-prereleases = true}
requests-toolbelt = {version = "1.0.0", allow-prereleases = true}
rsa = {version = "4.9", allow-prereleases = true}
setuptools = {version = "69.0.2", allow-prereleases = true}
shellingham = {version = "1.5.4", allow-prereleases = true}
six = {version = "1.16.0", allow-prereleases = true}
sniffio = {version = "1.3.0", allow-prereleases = true}
sqlalchemy = {version = "2.0.23", allow-prereleases = true}
starlette = {version = "0.27.0", allow-prereleases = true}
tomlkit = {version = "0.12.1", allow-prereleases = true}
trove-classifiers = {version = "2023.10.18", allow-prereleases = true}
typing-extensions = {version = "4.9.0", allow-prereleases = true}
urllib3 = {version = "2.0.7", allow-prereleases = true}
uvicorn = {version = "0.25.0", allow-prereleases = true}
virtualenv = {version = "20.24.6", allow-prereleases = true}
watchfiles = {version = "0.21.0", allow-prereleases = true}
websockets = {version = "12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
